Elinor 1.3.0.23, 2014-03-15
----------------------
- Changed Assembly and product versions
- Removed tutorial
- Tabs re-arrangement
- Tabs name change
- Main window is now smaller
- Restore default buttons are now tab-specific and work fine.
- currentVersion.xml updated to match actual host configuration
- Removed margin sliders
- Added MessageBoxEx Class
- Added check on profile update from API

Elinor 1.2.0.17, 2014-01-20
----------------------
- Added change-log file
- Added updating of profile using API informations used for profile creation
- Added cost of a single buy / sell order
- Added last used profile selection at start-up
- Re-organized the window
- Changed the update system to use elinor.slivo.fr
- Changed name to elinor-reloaded
- Changed about window informations
- Removed example table
- Removed advanced increment warning
- Removed the desktop icon at install