@@ -1,0 +1,11 @@
+﻿<Window x:Class="Elinor.NewProfileWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        d:DesignHeight="229" SizeToContent="WidthAndHeight" d:DesignWidth="423" Title="New profile" ResizeMode="NoResize">
+        
+    <Grid Height="188">
+        <Button Content="Import from eve API" Height="75" HorizontalAlignment="Left" Margin="12,15,12,12" Name="btnImportAPI" VerticalAlignment="Top" Width="375" Background="#1E000000" BorderBrush="#9B000000" Focusable="False" Click="btnImportAPI_Click" />
+        <Button Content="New empty profile" Height="75" HorizontalAlignment="Left" Margin="12,100,12,12" Name="btnCreateNew" Width="375" Focusable="False" Background="#1E000000" BorderBrush="#9B000000" Click="btnCreateNew_Click" />
+    </Grid>
+</Window>
